:art: Modify and standardize database terminology fix #12935 (#13152)
* 中文 i18n

* 简体中文 繁体中文 用户指南

* 繁体中文 i18n

* 英文 用户指南

* 英文 i18n

* 数据库字段菜单

* 数据库视图菜单

* 数据库条目右键菜单

分隔线关联：
https://github.com/siyuan-note/siyuan/issues/12518
https://github.com/siyuan-note/siyuan/issues/12910

* 顺序调整

* 简体中文 繁体中文 i18n

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1,4 +1,5 @@
 {
+  "fields": "Attribut",
   "dynamicEmoji": "Icône dynamique",
   "backlinkContainChildren": "Enthalten Rückverweise untergeordnete Blöcke",
   "backlinkContainChildrenTip": "Wenn aktiviert, werden untergeordnete Blöcke in die Berechnung der Rückverweise einbezogen",
