--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1,4 +1,5 @@
 {
+  "fields": "Fields",
   "dynamicEmoji": "Dynamic icon",
   "backlinkContainChildren": "Do backlinks contain child blocks",
   "backlinkContainChildrenTip": "When enabled, child blocks will be included in the backlink calculation",
@@ -39,7 +40,7 @@
   "confirmDeleteTip": "Are you sure to delete <b>${x}</b>?",
   "rollbackTip": "After deletion, it can be restored in [Data History], retained <code class= 'fn__code'>${x}</code> days according to [Settings - Editor - History Retention Days]",
   "newView": "Add View",
-  "newCol": "Add column",
+  "newCol": "Add field",
   "newRow": "Add entry",
   "enterKey": "Enter",
   "doubleClick": "Double Click",
@@ -72,7 +73,7 @@
   "removeCard": "Remove flashcard",
   "updateLayout": "Update layout",
   "dndFolderTip": "Please note that ${x} only inserts the file:// hyperlink and does not copy the file",
-  "removeCol": "Are you sure you want to delete the <b>${x}</b> column in the database?",
+  "removeCol": "Are you sure you want to delete the <b>${x}</b> field in the database?",
   "video": "Video",
   "audio": "Audio",
   "updateAll": "Update all",
@@ -86,7 +87,7 @@
   "lastReviewTime": "Last review time",
   "cardStatus": "Card status",
   "noSupportTip": "This function does not support the use of card decks",
-  "insertRowTip": "The newly added rows have been filtered and can be viewed by canceling filtering/searching/sorting",
+  "insertRowTip": "The newly added entries have been filtered and can be viewed by canceling filtering/searching/sorting",
   "insertPhoto": "Take a photo and insert it",
   "relativeToToday": "Relative to today",
   "current": "This",
@@ -111,7 +112,7 @@
   "dragFill": "Drag vertically to fill value",
   "switchReadonly": "Switch read-only mode",
   "original": "Original",
-  "selectRelation": "Please select the related column first",
+  "selectRelation": "Please select the related field first",
   "backRelation": "Bidirectional",
   "thisDatabase": "This database",
   "relatedTo": "Relation to",
@@ -119,7 +120,7 @@
   "rollup": "Rollup",
   "rollupProperty": "Property",
   "rollupCalc": "Calculate",
-  "searchRelation": "Search for a relation property",
+  "searchRelation": "Search for a relation field",
   "searchRollupProperty": "Search for a property",
   "replaceTypes": {
     "text": "Normal text",
@@ -162,8 +163,8 @@
   "unsplit": "Unsplit",
   "unsplitAll": "Unsplit All",
   "resetCardTip": "Are you sure reset ${x} flashcards?",
-  "freezeCol": "Freeze column",
-  "unfreezeCol": "Unfreeze column",
+  "freezeCol": "Freeze field",
+  "unfreezeCol": "Unfreeze field",
   "snippetsTip": "The code snippet has been updated, do you want to save it?",
   "addBelowAbove": "Click <span class='ft__on-surface'>Add below</span><br>⌥Click <span class='ft__on-surface'>Add above</span>",
   "imported": "Import completed",
@@ -274,10 +275,10 @@
   "filterOperatorIsOnOrAfter": "Is on or after",
   "asc": "Ascending",
   "desc": "Descending",
-  "hideCol": "Hide column",
+  "hideCol": "Hide field",
   "hideAll": "Hide all",
   "showAll": "Show all",
-  "showCol": "Show column",
+  "showCol": "Show field",
   "number": "Number",
   "date": "Date",
   "select": "Select",
