--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1,4 +1,5 @@
 {
+  "fields": "Attribut",
   "dynamicEmoji": "Icône dynamique",
   "backlinkContainChildren": "Les liens retour contiennent-ils des sous-blocs",
   "backlinkContainChildrenTip": "Une fois activé, les sous-blocs seront inclus dans le calcul des liens retour",
