--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1,4 +1,5 @@
 {
+  "fields": "属性",
   "dynamicEmoji": "動的アイコン",
   "backlinkContainChildren": "バックリンクに子ブロックを含めるかどうか",
   "backlinkContainChildrenTip": "有効にすると、子ブロックがバックリンク計算に含まれます",
