--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,4 +1,5 @@
 {
+  "fields": "Атрибут",
   "dynamicEmoji": "Динамическая иконка",
   "backlinkContainChildren": "Включать ли дочерние блоки в обратные ссылки",
   "backlinkContainChildrenTip": "После включения дочерние блоки будут включены в расчет обратных ссылок",
