--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1,4 +1,5 @@
 {
+  "fields": "欄位",
   "dynamicEmoji": "動態圖標",
   "backlinkContainChildren": "反向鏈接包含子塊",
   "backlinkContainChildrenTip": "啟用後子塊將被納入到反向鏈接計算中",
@@ -39,7 +40,7 @@
   "confirmDeleteTip": "確定刪除<b>${x}</b> 嗎？",
   "rollbackTip": "刪除後可在 [資料歷史] 中恢復，按 [設定 - 編輯器 - 歷史保留天數] 保留 <code class= 'fn__code'>${x}</code> 天",
   "newView": "新增視圖",
-  "newCol": "新增列",
+  "newCol": "新增欄位",
   "newRow": "新增項目",
   "enterKey": "回車",
   "doubleClick": "雙擊",
@@ -86,7 +87,7 @@
   "lastReviewTime": "最後複習時間",
   "cardStatus": "卡片狀態",
   "noSupportTip": "此功能不支援卡包使用",
-  "insertRowTip": "新增行已被過濾，可取消過濾/搜尋/排序進行查看",
+  "insertRowTip": "新增條目已被過濾，可取消過濾/搜尋/排序進行查看",
   "insertPhoto": "拍照並插入",
   "relativeToToday": "相對於今天",
   "current": "當前",
@@ -111,7 +112,7 @@
   "dragFill": "垂直拖動以填充值",
   "switchReadonly": "唯讀模式切換",
   "original": "原值",
-  "selectRelation": "請先選擇關聯列",
+  "selectRelation": "請先選擇關聯欄位",
   "backRelation": "雙向關聯",
   "thisDatabase": "目前資料庫",
   "relatedTo": "關聯至",
@@ -119,7 +120,7 @@
   "rollup": "匯總",
   "rollupProperty": "總計欄位",
   "rollupCalc": "彙總方式",
-  "searchRelation": "搜尋關聯列",
+  "searchRelation": "搜尋關聯欄位",
   "searchRollupProperty": "搜尋總計欄位",
   "replaceTypes": {
     "text": "普通文字",
@@ -162,8 +163,8 @@
   "unsplit": "取消分割畫面",
   "unsplitAll": "取消全部分螢幕",
   "resetCardTip": "確定重設 ${x} 張閃卡？",
-  "freezeCol": "固定列",
-  "unfreezeCol": "取消列固定",
+  "freezeCol": "固定欄位",
+  "unfreezeCol": "取消固定欄位",
   "snippetsTip": "程式碼片段已更新，是否儲存？",
   "addBelowAbove": "點擊 <span class='ft__on-surface'>在下方新增</span><br>⌥點擊 <span class='ft__on-surface'>在上方新增</span>",
   "imported": "導入完成",
@@ -227,13 +228,13 @@
   "builtIn": "內置",
   "endDate": "結束日期",
   "needLogin": "該功能需要登錄賬號後才能使用",
-  "calcResultCountAll": "行計數",
-  "calcResultCountValues": "值計數",
-  "calcResultCountUniqueValues": "唯一值計數",
-  "calcResultCountEmpty": "空值計數",
-  "calcResultCountNotEmpty": "非空值計數",
-  "calcResultPercentEmpty": "空值佔比",
-  "calcResultPercentNotEmpty": "非空值佔比",
+  "calcResultCountAll": "條目數",
+  "calcResultCountValues": "值數量",
+  "calcResultCountUniqueValues": "唯一值",
+  "calcResultCountEmpty": "未填寫",
+  "calcResultCountNotEmpty": "已填寫",
+  "calcResultPercentEmpty": "未填寫佔比",
+  "calcResultPercentNotEmpty": "已填寫佔比",
   "calcResultSum": "求和",
   "calcResultAverage": "平均值",
   "calcResultMedian": "中位數",
@@ -244,13 +245,13 @@
   "createWorkspace": "創建工作空間",
   "createWorkspaceTip": "確定使用該路徑創建工作空間嗎？",
   "calcOperatorNone": "無",
-  "calcOperatorCountAll": "行計數",
-  "calcOperatorCountValues": "值計數",
-  "calcOperatorCountUniqueValues": "唯一值計數",
-  "calcOperatorCountEmpty": "空值計數",
-  "calcOperatorCountNotEmpty": "非空值計數",
-  "calcOperatorPercentEmpty": "空值佔比",
-  "calcOperatorPercentNotEmpty": "非空值佔比",
+  "calcOperatorCountAll": "條目數",
+  "calcOperatorCountValues": "值數量",
+  "calcOperatorCountUniqueValues": "唯一值",
+  "calcOperatorCountEmpty": "未填寫",
+  "calcOperatorCountNotEmpty": "已填寫",
+  "calcOperatorPercentEmpty": "未填寫佔比",
+  "calcOperatorPercentNotEmpty": "已填寫佔比",
   "calcOperatorSum": "求和",
   "calcOperatorAverage": "平均值",
   "calcOperatorMedian": "中位數",
@@ -274,10 +275,10 @@
   "filterOperatorIsOnOrAfter": "晚於或等於",
   "asc": "升序",
   "desc": "降序",
-  "hideCol": "隱藏列",
+  "hideCol": "隱藏欄位",
   "hideAll": "隱藏全部",
   "showAll": "顯示全部",
-  "showCol": "顯示列",
+  "showCol": "顯示欄位",
   "number": "數字",
   "date": "日期",
   "select": "單選",
