--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1,4 +1,5 @@
 {
+  "fields": "מאפיין",
   "dynamicEmoji": "אייקון דינמי",
   "backlinkContainChildren": "האם קישורים חוזרים כוללים בלוקים משניים",
   "backlinkContainChildrenTip": "לאחר ההפעלה, בלוקים משניים ייכללו בחישוב הקישורים החוזרים",
