--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1,4 +1,5 @@
 {
+  "fields": "Atrybut",
   "dynamicEmoji": "Динамическая иконка",
   "backlinkContainChildren": "Czy linki zwrotne zawierają bloki podrzędne",
   "backlinkContainChildrenTip": "Po włączeniu bloki podrzędne zostaną uwzględnione w obliczeniach linków zwrotnych",
