--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,4 +1,5 @@
 {
+  "fields": "字段",
   "dynamicEmoji": "动态图标",
   "backlinkContainChildren": "反向链接包含子块",
   "backlinkContainChildrenTip": "启用后子块将被纳入到反向链接计算中",
@@ -39,7 +40,7 @@
   "confirmDeleteTip": "确定删除 <b>${x}</b> 吗？",
   "rollbackTip": "删除后可在 [数据历史] 中恢复，按 [设置 - 编辑器 - 历史保留天数] 保留 <code class='fn__code'>${x}</code> 天",
   "newView": "添加视图",
-  "newCol": "添加列",
+  "newCol": "添加字段",
   "newRow": "添加条目",
   "enterKey": "回车",
   "doubleClick": "双击",
@@ -72,7 +73,7 @@
   "removeCard": "移除闪卡",
   "updateLayout": "更新布局",
   "dndFolderTip": "请注意 ${x} 仅插入 file:// 超链接，不复制文件",
-  "removeCol": "确定删除数据库中的 <b>${x}</b> 列？",
+  "removeCol": "确定删除数据库中的 <b>${x}</b> 字段？",
   "video": "视频",
   "audio": "音频",
   "updateAll": "全部更新",
@@ -86,7 +87,7 @@
   "lastReviewTime": "最后复习时间",
   "cardStatus": "卡片状态",
   "noSupportTip": "该功能不支持卡包使用",
-  "insertRowTip": "新增行已被过滤，可取消过滤/搜索/排序进行查看",
+  "insertRowTip": "新增条目已被过滤，可取消过滤/搜索/排序进行查看",
   "insertPhoto": "拍照并插入",
   "relativeToToday": "相对于今天",
   "current": "当前",
@@ -111,7 +112,7 @@
   "dragFill": "垂直拖动以填充值",
   "switchReadonly": "只读模式切换",
   "original": "原值",
-  "selectRelation": "请先选择关联列",
+  "selectRelation": "请先选择关联字段",
   "backRelation": "双向关联",
   "thisDatabase": "当前数据库",
   "relatedTo": "关联至",
@@ -119,7 +120,7 @@
   "rollup": "汇总",
   "rollupProperty": "汇总字段",
   "rollupCalc": "汇总方式",
-  "searchRelation": "搜索关联列",
+  "searchRelation": "搜索关联字段",
   "searchRollupProperty": "搜索汇总字段",
   "replaceTypes": {
     "text": "普通文本",
@@ -162,8 +163,8 @@
   "unsplit": "取消分屏",
   "unsplitAll": "取消全部分屏",
   "resetCardTip": "确定重置 ${x} 张闪卡？",
-  "freezeCol": "固定列",
-  "unfreezeCol": "取消列固定",
+  "freezeCol": "固定字段",
+  "unfreezeCol": "取消固定字段",
   "snippetsTip": "代码片段已更新，是否保存？",
   "addBelowAbove": "点击 <span class='ft__on-surface'>在下方添加</span><br>⌥点击 <span class='ft__on-surface'>在上方添加</span>",
   "imported": "导入完成",
@@ -227,13 +228,13 @@
   "builtIn": "内置",
   "endDate": "结束时间",
   "needLogin": "该功能需要登录账号后才能使用",
-  "calcResultCountAll": "行计数",
-  "calcResultCountValues": "值计数",
-  "calcResultCountUniqueValues": "唯一值计数",
-  "calcResultCountEmpty": "空值计数",
-  "calcResultCountNotEmpty": "非空值计数",
-  "calcResultPercentEmpty": "空值占比",
-  "calcResultPercentNotEmpty": "非空值占比",
+  "calcResultCountAll": "条目数",
+  "calcResultCountValues": "值数量",
+  "calcResultCountUniqueValues": "唯一值",
+  "calcResultCountEmpty": "未填写",
+  "calcResultCountNotEmpty": "已填写",
+  "calcResultPercentEmpty": "未填写占比",
+  "calcResultPercentNotEmpty": "已填写占比",
   "calcResultSum": "求和",
   "calcResultAverage": "平均值",
   "calcResultMedian": "中位数",
@@ -244,13 +245,13 @@
   "createWorkspace": "创建工作空间",
   "createWorkspaceTip": "确定使用该路径创建工作空间吗？",
   "calcOperatorNone": "无",
-  "calcOperatorCountAll": "行计数",
-  "calcOperatorCountValues": "值计数",
-  "calcOperatorCountUniqueValues": "唯一值计数",
-  "calcOperatorCountEmpty": "空值计数",
-  "calcOperatorCountNotEmpty": "非空值计数",
-  "calcOperatorPercentEmpty": "空值占比",
-  "calcOperatorPercentNotEmpty": "非空值占比",
+  "calcOperatorCountAll": "条目数",
+  "calcOperatorCountValues": "值数量",
+  "calcOperatorCountUniqueValues": "唯一值",
+  "calcOperatorCountEmpty": "未填写",
+  "calcOperatorCountNotEmpty": "已填写",
+  "calcOperatorPercentEmpty": "未填写占比",
+  "calcOperatorPercentNotEmpty": "已填写占比",
   "calcOperatorSum": "求和",
   "calcOperatorAverage": "平均值",
   "calcOperatorMedian": "中位数",
@@ -274,10 +275,10 @@
   "filterOperatorIsOnOrAfter": "晚于或等于",
   "asc": "升序",
   "desc": "降序",
-  "hideCol": "隐藏列",
+  "hideCol": "隐藏字段",
   "hideAll": "隐藏全部",
   "showAll": "显示全部",
-  "showCol": "显示列",
+  "showCol": "显示字段",
   "number": "数字",
   "date": "日期",
   "select": "单选",
