:art: Italian Translation, refer to #13152 (#13153)
* Update it_IT.json

* Update it_IT.json

* Update it_IT.json

--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -1,6 +1,6 @@
 {
-  "fields": "Attributo",
-  "dynamicEmoji": "動的アイコン",
+  "fields": "Campi",
+  "dynamicEmoji": "Emoji dinamica",
   "backlinkContainChildren": "I backlink contengono blocchi figli",
   "backlinkContainChildrenTip": "Dopo l'attivazione, i blocchi figli saranno inclusi nel calcolo dei backlink",
   "entryNum": "Numero di voci",
@@ -40,7 +40,7 @@
   "confirmDeleteTip": "Sei sicuro di voler eliminare <b>${x}</b>?",
   "rollbackTip": "Dopo l'eliminazione, può essere ripristinato in [Cronologia dati], conservato <code class= 'fn__code'>${x}</code> giorni in base a [Impostazioni - Editor - Giorni di conservazione della cronologia]",
   "newView": "Aggiungi vista",
-  "newCol": "Aggiungi colonna",
+  "newCol": "Aggiungi campo",
   "newRow": "Aggiungi voce",
   "enterKey": "Invio",
   "doubleClick": "Doppio clic",
@@ -87,7 +87,7 @@
   "lastReviewTime": "Ultima revisione",
   "cardStatus": "Stato della carta",
   "noSupportTip": "Questa funzione non supporta l'uso di mazzi di carte",
-  "insertRowTip": "Le righe appena aggiunte sono state filtrate e possono essere visualizzate annullando il filtraggio/ricerca/ordinamento",
+  "insertRowTip": "L'elemento aggiunto è stato filtrato, è possibile annullare filtro/ricerca/ordinamento per visualizzarlo",
   "insertPhoto": "Scatta una foto e inseriscila",
   "relativeToToday": "Relativo a oggi",
   "current": "Questo",
@@ -112,7 +112,7 @@
   "dragFill": "Trascina verticalmente per riempire i valori",
   "switchReadonly": "Passa alla modalità di sola lettura",
   "original": "Originale",
-  "selectRelation": "Seleziona prima la colonna correlata",
+  "selectRelation": "Seleziona prima il campo correlato",
   "backRelation": "Bidirezionale",
   "thisDatabase": "Questo database",
   "relatedTo": "Relazionato a",
@@ -163,8 +163,8 @@
   "unsplit": "Dividi",
   "unsplitAll": "Dividi tutto",
   "resetCardTip": "Sei sicuro di voler reimpostare ${x} flashcard?",
-  "freezeCol": "Blocca colonna",
-  "unfreezeCol": "Sblocca colonna",
+  "freezeCol": "Blocca campo",
+  "unfreezeCol": "Sblocca campo",
   "snippetsTip": "Lo snippet di codice è stato aggiornato, vuoi salvarlo?",
   "addBelowAbove": "Clicca <span class='ft__on-surface'>Aggiungi sotto</span><br>⌥Clicca <span class='ft__on-surface'>Aggiungi sopra</span>",
   "imported": "Importazione completata",
@@ -275,10 +275,10 @@
   "filterOperatorIsOnOrAfter": "È il giorno o dopo di",
   "asc": "Ascendente",
   "desc": "Discendente",
-  "hideCol": "Nascondi colonna",
+  "hideCol": "Nascondi campo",
   "hideAll": "Nascondi tutto",
   "showAll": "Mostra tutto",
-  "showCol": "Mostra colonna",
+  "showCol": "Mostra campo",
   "number": "Numero",
   "date": "Data",
   "select": "Seleziona",
@@ -1261,7 +1261,7 @@
   "uploadError": "Errore di caricamento",
   "uploading": "Caricamento in corso.",
   "wysiwyg": "WYSIWYG",
-  "_label": "Inglese",
+  "_label": "Italiano",
   "_time": {
     "albl": "fa",
     "blbl": "da adesso",
