--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -1,6 +1,6 @@
 {
   "fields": "Atributo",
-  "dynamicEmoji": "Icône dynamique",
+  "dynamicEmoji": "Icono dinámico",
   "backlinkContainChildren": "¿Los enlaces inversos contienen bloques secundarios?",
   "backlinkContainChildrenTip": "Una vez habilitado, los bloques secundarios se incluirán en el cálculo de los enlaces inversos",
   "entryNum": "Número de entradas",
