:art: Automatic purge for local data repo https://github.com/siyuan-note/siyuan/issues/13091

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1,4 +1,6 @@
 {
+  "dataRepoAutoPurgeIndexRetentionDays": "Daten-Snapshot-Aufbewahrungstage",
+  "dataRepoAutoPurgeRetentionIndexesDaily": "Daten-Snapshots pro Tag",
   "fields": "Attribut",
   "dynamicEmoji": "Dynamisches Icon",
   "backlinkContainChildren": "Enthalten Rückverweise untergeordnete Blöcke",
