--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1,4 +1,6 @@
 {
+  "dataRepoAutoPurgeIndexRetentionDays": "Dni przechowywania migawek danych",
+  "dataRepoAutoPurgeRetentionIndexesDaily": "Liczba migawek danych dziennie",
   "fields": "Atrybut",
   "dynamicEmoji": "Ikona dynamiczna",
   "backlinkContainChildren": "Czy linki zwrotne zawierają bloki podrzędne",
