--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1,4 +1,6 @@
 {
+  "dataRepoAutoPurgeIndexRetentionDays": "Jours de rétention des instantanés de données",
+  "dataRepoAutoPurgeRetentionIndexesDaily": "Nombre d'instantanés de données par jour",
   "fields": "Attribut",
   "dynamicEmoji": "Icône dynamique",
   "backlinkContainChildren": "Les liens retour contiennent-ils des sous-blocs",
