--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1,4 +1,6 @@
 {
+  "dataRepoAutoPurgeIndexRetentionDays": "數據快照保留天數",
+  "dataRepoAutoPurgeRetentionIndexesDaily": "數據快照每天保留個數",
   "fields": "欄位",
   "dynamicEmoji": "動態圖標",
   "backlinkContainChildren": "反向鏈接包含子塊",
