:art: https://github.com/siyuan-note/siyuan/issues/11053

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1,4 +1,5 @@
 {
+  "addDesc": "Beschreibung hinzufügen",
   "dataRepoAutoPurgeIndexRetentionDays": "Daten-Snapshot-Aufbewahrungstage",
   "dataRepoAutoPurgeRetentionIndexesDaily": "Daten-Snapshots pro Tag",
   "fields": "Attribut",
