--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,4 +1,5 @@
 {
+  "addDesc": "添加描述",
   "dataRepoAutoPurgeIndexRetentionDays": "数据快照保留天数",
   "dataRepoAutoPurgeRetentionIndexesDaily": "数据快照每天保留个数",
   "fields": "字段",
