--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1,4 +1,5 @@
 {
+  "addDesc": "הוסף תיאור",
   "dataRepoAutoPurgeIndexRetentionDays": "ימי שמירת תמונות נתונים",
   "dataRepoAutoPurgeRetentionIndexesDaily": "מספר תמונות נתונים ביום",
   "fields": "מאפיין",
