--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1,4 +1,5 @@
 {
+  "addDesc": "Dodaj opis",
   "dataRepoAutoPurgeIndexRetentionDays": "Dni przechowywania migawek danych",
   "dataRepoAutoPurgeRetentionIndexesDaily": "Liczba migawek danych dziennie",
   "fields": "Atrybut",
