--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,4 +1,5 @@
 {
+  "keyContent": "Содержимое ключа",
   "addDesc": "Добавить описание",
   "dataRepoAutoPurgeIndexRetentionDays": "Срок хранения снимков данных",
   "dataRepoAutoPurgeRetentionIndexesDaily": "Количество снимков данных в день",
