:art: https://github.com/siyuan-note/siyuan/issues/14231

--- a/app/appearance/langs/ar_SA.json
+++ b/app/appearance/langs/ar_SA.json
@@ -1,5 +1,6 @@
 {
-  "localFlieSystem": "نظام الملفات المحلي",
+  "relativeFontSize": "نسبة إلى حجم خط المحرر",
+  "localFileSystem": "نظام الملفات المحلي",
   "deviceNotSupport": "الجهاز الحالي غير مدعوم",
   "second": "ثانية",
   "syncInterval": "الفاصل الزمني للمزامنة",
