--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,5 +1,6 @@
 {
-  "localFlieSystem": "Локальная файловая система",
+  "relativeFontSize": "относительно размера шрифта редактора",
+  "localFileSystem": "Локальная файловая система",
   "deviceNotSupport": "Текущее устройство не поддерживается",
   "second": "секунда",
   "syncInterval": "интервал синхронизации",
