--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,5 +1,6 @@
 {
-  "localFlieSystem": "本地文件系统",
+  "relativeFontSize": "相对于编辑器字号",
+  "localFileSystem": "本地文件系统",
   "deviceNotSupport": "当前设备不支持",
   "second": "秒",
   "syncInterval": "同步间隔",
