:art: Improve reconnection prompt after switching apps on iOS https://github.com/siyuan-note/siyuan/issues/14279

--- a/app/appearance/langs/ar_SA.json
+++ b/app/appearance/langs/ar_SA.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "يرجى الانتظار...",
+  "reconnectPrompt": "بعد تبديل التطبيقات، سيستغرق الأمر بعض الوقت لاستعادة تشغيل نواة SiYuan. يرجى الانتظار بضع ثوانٍ أو النقر فوق الزر \"إعادة المحاولة\"",
   "relativeFontSize": "نسبة إلى حجم خط المحرر",
   "localFileSystem": "نظام الملفات المحلي",
   "deviceNotSupport": "الجهاز الحالي غير مدعوم",
