--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "Please wait...",
+  "reconnectPrompt": "After switching applications, it will take some time to restore the SiYuan kernel operation. Please wait a few seconds or click the \"Retry\" button",
   "relativeFontSize": "relative to the editor font size",
   "localFileSystem": "Local file system",
   "deviceNotSupport": "The current device is not supported",
