--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "Veuillez patienter...",
+  "reconnectPrompt": "Après avoir changé d'application, il faudra un certain temps pour rétablir le fonctionnement du noyau SiYuan. Veuillez patienter quelques secondes ou cliquer sur le bouton « Réessayer »",
   "relativeFontSize": "par rapport à la taille de la police de l'éditeur",
   "localFileSystem": "Système de fichiers local",
   "deviceNotSupport": "L'appareil actuel n'est pas pris en charge",
