--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "אנא המתן...",
+  "reconnectPrompt": "לאחר מעבר בין יישומים, יידרש זמן מה כדי לשחזר את פעולת ליבת SiYuan. אנא המתן מספר שניות או לחץ על כפתור \"נסה שוב\"",
   "relativeFontSize": "יחסית לגודל הגופן של העורך",
   "localFileSystem": "מערכת קבצים מקומית",
   "deviceNotSupport": "המכשיר הנוכחי אינו נתמך",
