--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "しばらくお待ちください...",
+  "reconnectPrompt": "アプリを切り替えた後、思源カーネルの実行を再開するには少し時間がかかります。数秒待つか、「再試行」ボタンをクリックしてください",
   "relativeFontSize": "エディターのフォントサイズに対して",
   "localFileSystem": "ローカルファイルシステム",
   "deviceNotSupport": "現在のデバイスはサポートされていません",
