--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "Proszę czekać...",
+  "reconnectPrompt": "Po przełączeniu aplikacji ponowne uruchomienie jądra SiYuan może zająć trochę czasu. Proszę poczekać kilka sekund lub kliknąć przycisk „Ponów próbę”",
   "relativeFontSize": "względem rozmiaru czcionki edytora",
   "localFileSystem": "Lokalny system plików",
   "deviceNotSupport": "Bieżące urządzenie nie jest obsługiwane",
