--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "请稍等片刻...",
+  "reconnectPrompt": "切换应用后再次进入需要一些时间恢复思源内核运行，请稍等几秒或者点击“重试”按钮",
   "relativeFontSize": "相对于编辑器字号",
   "localFileSystem": "本地文件系统",
   "deviceNotSupport": "当前设备不支持",
