--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "Por favor, espere...",
+  "reconnectPrompt": "Después de cambiar de aplicación, tomará algún tiempo restaurar el funcionamiento del núcleo de SiYuan. Espere unos segundos o haga clic en el botón \"Reintentar\"",
   "relativeFontSize": "en relación con el tamaño de fuente del editor",
   "localFileSystem": "Sistema de archivos local",
   "deviceNotSupport": "El dispositivo actual no es compatible",
