--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "Пожалуйста, подождите...",
+  "reconnectPrompt": "После переключения приложений потребуется некоторое время, чтобы восстановить работу ядра SiYuan. Пожалуйста, подождите несколько секунд или нажмите кнопку «Повторить»",
   "relativeFontSize": "относительно размера шрифта редактора",
   "localFileSystem": "Локальная файловая система",
   "deviceNotSupport": "Текущее устройство не поддерживается",
