--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1,4 +1,6 @@
 {
+  "pleaseWait": "請稍等片刻...",
+  "reconnectPrompt": "切換應用後再次進入需要一些時間恢復思源內核運行，請稍等幾秒或者點擊“重試”按鈕",
   "relativeFontSize": "相對於編輯器字號",
   "localFileSystem": "本地檔案系統",
   "deviceNotSupport": "當前設備不支援",
