:art: Improve text https://github.com/siyuan-note/siyuan/issues/14292

--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -450,7 +450,7 @@
   "workspaceList": "ワークスペース",
   "removeWorkspaceTip": "ワークスペースから削除",
   "new": "新規作成",
-  "share2LiandiConfirmTip": "このドキュメントをコミュニティに公開してもよろしいですか？",
+  "share2LiandiConfirmTip": "このドキュメントを<b>公開</b>してコミュニティに共有しますか？<br>公開後、すべての人がこのドキュメントを閲覧できるようになります。ドキュメントに機密情報が含まれていないことを確認してください",
   "share2Liandi": "コミュニティに公開する",
   "noDueCard": "お疲れ様です！現在復習タスクはありません。後でまた確認してください",
   "createDeck": "デッキを作成",
