--- a/app/appearance/langs/ar_SA.json
+++ b/app/appearance/langs/ar_SA.json
@@ -450,7 +450,7 @@
   "workspaceList": "مساحات العمل",
   "removeWorkspaceTip": "إزالة من مساحة العمل",
   "new": "إنشاء",
-  "share2LiandiConfirmTip": "هل أنت متأكد من مشاركة هذا المستند إلى المجتمع؟",
+  "share2LiandiConfirmTip": "هل أنت متأكد من أنك تريد مشاركة هذا المستند <b>علنًا</b> مع المجتمع؟<br>بعد المشاركة العلنية، يمكن للجميع عرض المستند. يرجى التأكد من أن المستند لا يحتوي على معلومات حساسة",
   "share2Liandi": "المشاركة إلى المجتمع",
   "noDueCard": "ممتاز! لا يوجد المزيد من مهام المراجعة في الوقت الحالي، عُد للتحقق لاحقاً!",
   "createDeck": "إنشاء شدة",
