--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -450,7 +450,7 @@
   "workspaceList": "Aree di lavoro",
   "removeWorkspaceTip": "Rimuovi dalle aree di lavoro",
   "new": "Nuovo",
-  "share2LiandiConfirmTip": "Sei sicuro di voler condividere questo documento con la comunità?",
+  "share2LiandiConfirmTip": "Sei sicuro di voler <b>pubblicare</b> questo documento nella comunità?<br>Dopo la pubblicazione, tutti potranno visualizzare questo documento, assicurati che non contenga informazioni riservate",
   "share2Liandi": "Condividi con la comunità",
   "noDueCard": "Ottimo lavoro! Non ci sono altre attività di revisione al momento, ricontrolla più tardi!",
   "createDeck": "Crea mazzo",
