--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -450,7 +450,7 @@
   "workspaceList": "מקומות עבודה",
   "removeWorkspaceTip": "הסר ממקומות עבודה",
   "new": "חדש",
-  "share2LiandiConfirmTip": "האם אתה בטוח שברצונך <b>לפרסם</b> את המסמך הזה בקהילה?<br>לאחר הפרסום, כל אחד יוכל לצפות במסמך זה, ודא שהוא אינו מכיל מידע רגיש",
+  "share2LiandiConfirmTip": "האם אתה בטוח שברצונך <b>לפרסם</b> את המסמך הזה ב<a href=\"${accountServer}\" target=\"_blank\">קהילה</a>?<br>לאחר הפרסום, כל אחד יוכל לצפות במסמך זה, ודא שהוא אינו מכיל מידע רגיש",
   "share2Liandi": "שיתוף עם הקהילה",
   "noDueCard": "עבודה מצוינת! לא עוד משימות לסקירה כרגע, בדוק שוב מאוחר יותר!",
   "createDeck": "צור ערמת כרטיסים",
