--- a/app/changelogs/v3.1.25/v3.1.25_zh_CHT.md
+++ b/app/changelogs/v3.1.25/v3.1.25_zh_CHT.md
@@ -45,6 +45,7 @@
 * [改進從 Claude 貼上公式](https://github.com/siyuan-note/siyuan/issues/14360)
 * [資料庫資源欄位支援鍵盤操作](https://github.com/siyuan-note/siyuan/issues/14365)
 * [改進查詢嵌入區塊自動刷新](https://github.com/siyuan-note/siyuan/issues/14370)
+* [市集插件包更新後重新啟動插件](https://github.com/siyuan-note/siyuan/issues/14377)
 
 ### 移除功能
 
