--- a/app/changelogs/v3.1.25/v3.1.25_zh_CN.md
+++ b/app/changelogs/v3.1.25/v3.1.25_zh_CN.md
@@ -45,6 +45,7 @@
 * [改进从 Claude 粘贴公式](https://github.com/siyuan-note/siyuan/issues/14360)
 * [数据库资源字段支持键盘操作](https://github.com/siyuan-note/siyuan/issues/14365)
 * [改进查询嵌入块自动刷新](https://github.com/siyuan-note/siyuan/issues/14370)
+* [集市插件包更新后重启该插件](https://github.com/siyuan-note/siyuan/issues/14377)
 
 ### 移除功能
 
