:memo: Update changelogs

--- a/app/changelogs/v3.1.25/v3.1.25_zh_CHT.md
+++ b/app/changelogs/v3.1.25/v3.1.25_zh_CHT.md
@@ -46,6 +46,7 @@
 * [資料庫資源欄位支援鍵盤操作](https://github.com/siyuan-note/siyuan/issues/14365)
 * [改進查詢嵌入區塊自動刷新](https://github.com/siyuan-note/siyuan/issues/14370)
 * [市集插件包更新後重新啟動插件](https://github.com/siyuan-note/siyuan/issues/14377)
+* [行動端支援資源設定](https://github.com/siyuan-note/siyuan/pull/14380)
 
 ### 移除功能
 
