--- a/app/changelogs/v3.1.25/v3.1.25.md
+++ b/app/changelogs/v3.1.25/v3.1.25.md
@@ -46,6 +46,7 @@ Below are the detailed changes in this version.
 * [Database asset field support keyboard operation](https://github.com/siyuan-note/siyuan/issues/14365)
 * [Improve query embed block auto refresh](https://github.com/siyuan-note/siyuan/issues/14370)
 * [Restart the plugin after the marketplace plugin package is updated](https://github.com/siyuan-note/siyuan/issues/14377)
+* [Supports assets settings on mobile](https://github.com/siyuan-note/siyuan/pull/14380)
 
 ### Abolishment
 
