:art: Supports configuration of whether to export inline memos https://github.com/siyuan-note/siyuan/issues/14605

--- a/app/appearance/langs/ar_SA.json
+++ b/app/appearance/langs/ar_SA.json
@@ -1111,6 +1111,8 @@
   "export28": "نص العلامة المائية المخصصة أو مسار ملف العلامة المائية",
   "export29": "موقع العلامة المائية، حجمها وأسلوبها، إلخ",
   "export30": "صورة العلامة المائية للملف المصدّر",
+  "export31": "تصدير تعليقات السطر",
+  "export32": "عند التمكين، سيتم تصدير تعليقات السطر كحروف مرتفعة",
   "theme11": "استخدام السمة في الوضع الفاتح",
   "theme12": "استخدام السمة في الوضع الداكن",
   "theme2": "تحديد الرموز المستخدمة في واجهة المستخدم",
