--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1111,6 +1111,8 @@
   "export28": "Texte du filigrane ou chemin du fichier de filigrane",
   "export29": "Position, taille et style du filigrane, etc.",
   "export30": "Exporter le filigrane de l'image",
+  "export31": "Exporter les annotations de ligne",
+  "export32": "Une fois activé, les annotations de ligne seront exportées en exposant",
   "theme11": "Utiliser le thème en mode Clair",
   "theme12": "Utiliser le thème en mode sombre",
   "theme2": "Sélectionnez les icônes utilisées dans l'interface utilisateur",
