--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1111,6 +1111,8 @@
   "export28": "טקסט סימן מים או נתיב קובץ סימן מים",
   "export29": "מיקום סימן מים, גודל וסגנון, וכו'",
   "export30": "ייצוא סימן מים לתמונה",
+  "export31": "ייצוא הערות שורה",
+  "export32": "כאשר מופעל, הערות השורה ייוצאו ככתב עילי",
   "theme11": "שימוש בנושא במצב בהיר",
   "theme12": "שימוש בנושא במצב כהה",
   "theme2": "בחר את האייקונים בשימוש בממשק המשתמש",
