--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1111,6 +1111,8 @@
   "export28": "透かしテキストまたは透かし画像ファイルのパス",
   "export29": "透かしの位置、サイズ、スタイルなど",
   "export30": "画像に透かしを書き出す",
+  "export31": "行レベルの注釈をエクスポート",
+  "export32": "有効化すると、行レベルの注釈が上付き文字としてエクスポートされます",
   "theme11": "ライトモードで使われるテーマ",
   "theme12": "ダークモードで使われるテーマ",
   "theme2": "ユーザーインターフェースで使用するアイコン",
