--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1111,6 +1111,8 @@
   "export28": "Текст водяного знака или путь к файлу водяного знака",
   "export29": "Положение, размер и стиль водяного знака и т. д.",
   "export30": "Экспорт изображения водяного знака",
+  "export31": "Экспорт строковых примечаний",
+  "export32": "После включения строковые примечания будут экспортироваться в виде верхнего индекса",
   "theme11": "Использовать тему в светлом режиме",
   "theme12": "Использовать тему в темном режиме",
   "theme2": "Выберите значки, используемые в интерфейсе",
