--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1111,6 +1111,8 @@
   "export28": "水印文本或水印文件路径",
   "export29": "水印位置、大小和样式等",
   "export30": "导出图片水印",
+  "export31": "导出行级备注",
+  "export32": "启用后行级备注将会导出为上标内容",
   "theme11": "明亮模式下使用主题",
   "theme12": "暗黑模式下使用主题",
   "theme2": "选择外观使用的图标",
