--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1111,6 +1111,8 @@
   "export28": "Watermark text or watermark file path",
   "export29": "Watermark position, size and style, etc.",
   "export30": "Export image watermark",
+  "export31": "Export inline memos",
+  "export32": "When enabled, inline memos will be exported as superscript",
   "theme11": "Use theme in light mode",
   "theme12": "Use theme in dark mode",
   "theme2": "Select the icons used in the user interface",
