--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1111,6 +1111,8 @@
   "export28": "浮水印文字或浮水印檔案路徑",
   "export29": "浮水印位置、大小和樣式等",
   "export30": "匯出圖片浮水印",
+  "export31": "導出行級備註",
+  "export32": "啟用後行級備註將會導出為上標內容",
   "theme11": "淺色模式下使用主題",
   "theme12": "深色模式下使用主題",
   "theme2": "選擇外觀使用的圖示",
