:art: Improve text https://github.com/siyuan-note/siyuan/issues/14700

--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1217,7 +1217,7 @@
   "copy": "Copie",
   "copyText": "Copier le texte *",
   "delete-column": "Supprimer une Colonne",
-  "delete-row": "Supprimer la rangée",
+  "delete-row": "Supprimer la ligne",
   "down": "En bas",
   "downloadTip": "Ce navigateur ne prend pas en charge la fonction de téléchargement",
   "edit-mode": "Mode Toggle",
@@ -1269,7 +1269,7 @@
   "recording": "Enregistrement en cours...",
   "redo": "Refaire",
   "remove": "Supprimer",
-  "row": "Rangée",
+  "row": "Ligne",
   "splitView": "Vue partagée",
   "strike": "Strike",
   "table": "Tableau",
